package com.sistema_de_moeda_estudantil.sistema_de_moeda_estudantil.enums;

public enum TipoUsuario {
    ALUNO,
    PROFESSOR,
    EMPRESA
}
